ElasticKibana/deploy_elastic_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: E1@st1cS3rv1c3N@m3
  namespace: N@m3Sp@c3
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  clusterIP: None
  ports:
    - port: El@st1cP0rt
      name: rest
    - port: 9300
      name: inter-node
