ElasticKibana/deploy_kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: K1b@n@S3rv1c3
  namespace: N@m3Sp@c3
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: N@m3Sp@c3
  labels:
    app: kibana
spec:
  replicas: K1b@n@R3pl1c@s
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.2.0
        ports:
        - containerPort: 5601
