ElasticKibana/kibana-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: N@m3Sp@c3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "selfsigned-issuer" # does not make a difference unless you have internet reachable service/FQDN.
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  rules:
  - host: K1b@n@FQDN
    http:
      paths:
      - backend:
          serviceName: K1b@n@S3rv1c3
          servicePort: 5601
        path: /
  tls:
  - hosts:
    - K1b@n@FQDN
    secretName: K1b@n@FQDN
